mdapipkg/objects/Exception__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <filterItems>
                <field>Account.Chapter_Network_Exception__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_Waiver_Request_comments_or_cl__c</fullName>
        <label>Chapter Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_Question_1__c</fullName>
        <inlineHelpText>Please provide the reason/s that the candidate did not join YPO prior to his/her 45th birthday? Please provide Details.</inlineHelpText>
        <label>Reason for Age Waiver</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_Question_2__c</fullName>
        <inlineHelpText>Please share the actions that the chapter leadership plans to take to accelerate the integration of the candidate in YPO considering he/she is joining after the age of 45. i.e. forum placement, day chair etc.</inlineHelpText>
        <label>Age Integration Actions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Question_1__c</fullName>
        <inlineHelpText>What unique value the prospective member brings to the Chapter and YPO- YPO Gold that justify an exception to the requirements? Please elaborate.</inlineHelpText>
        <label>Unique Member Value</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_Question_2__c</fullName>
        <inlineHelpText>What level of participation and contribution the prospective member brings to the Chapter and YPO-YPO Gold that justify an exception to the requirements? Please elaborate</inlineHelpText>
        <label>Member Contribution</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_Dollar_Business_Volume__c</fullName>
        <label>Annual Revenue (Dollar Business Volume)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Approval__c</fullName>
        <label>CC Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMO_Approval__c</fullName>
        <label>CMO Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <description>Holds the ID of the Case created through Request Grace on Renewals</description>
        <label>CaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exceptions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Approval__c</fullName>
        <label>Chapter Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Membership_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Membership Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exceptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chpter_Chair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Chair</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DSDateField__c</fullName>
        <defaultValue>&quot;date&quot;</defaultValue>
        <label>DSDateField</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSEnvStatus__c</fullName>
        <label>DSEnvStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter any additional information here</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Early_Transition_Request__c</fullName>
        <formula>&quot;&amp;Id=&quot; +Id +
&quot;&amp;TemplateId=a2F2C0000004Kw5&quot; +
&quot;&amp;OFN=Early+Transition+Request+-+&quot;+Contact__c+
&quot;&amp;DocuSignVisible=1&quot; +
&quot;&amp;DocuSignEmailSubject=Please+DocuSign+this+document:+Early+Transition+Request&quot; +
&quot;&amp;DocuSignEmailBody=Please+review+the+Early+Tranisition+request+for+&quot; +Opportunity__r.KGRenewal__Contact__r.FirstName + &quot;+&quot; + Opportunity__r.KGRenewal__Contact__r.LastName + &quot;+and+either+approve+or+reject.&quot; +
&quot;&amp;DocuSignR1ID=&quot; +  Chapter_Membership_Officer__r.Id  +
&quot;&amp;DocuSignR1Role=Signer+1&quot; +
&quot;&amp;DocuSignR2ID=&quot; + Chpter_Chair__r.Id +
&quot;&amp;DocuSignR2Role=Signer+2&quot; +
&quot;&amp;DocuSignR3ID=&quot; + Chapter_Administrator__r.Id +
&quot;&amp;DocuSignR3Type=Carbon+Copy&quot; + 
&quot;&amp;DocuSignExpireVoidEnv=0&quot; +
&quot;&amp;defaultpdf=0&quot; +
&quot;&amp;DocuSignTag=0&quot; +
&quot;&amp;DS7=17&quot; +
&quot;&amp;QMode=DocuSign&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Transition Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Current_FY__c</fullName>
        <formula>TEXT( YEAR(End_of_Current_Fiscal__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Current_Fiscal__c</fullName>
        <formula>/*(Start_of_Current_Fiscal_Year__c) + (364)*/ 
DATE(YEAR(Start_of_Current_Fiscal_Year__c) + 1,6,30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of Current Fiscal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enterprise_Value_Corporation_Value__c</fullName>
        <label>Enterprise Value (Corporation Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exception_Category__c</fullName>
        <label>Exception Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grace</fullName>
                </value>
                <value>
                    <fullName>Waiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geographic_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geographic Requirement</label>
        <referenceTo>Geographic_Requirements__c</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grace_Chapter_Approval_CC__c</fullName>
        <description>&quot;&amp;DS7=17&quot; +</description>
        <formula>&quot;&amp;Id=&quot; +Id + 
&quot;&amp;TemplateId=a2F61000001KGdX&quot; + 
&quot;&amp;OFN=Grace+Request+-+&quot;+Contact__c+ 
&quot;&amp;DocuSignVisible=1&quot; + 
&quot;&amp;DocuSignEmailSubject=Please+DocuSign+this+document:+Grace+Request&quot; + 
&quot;&amp;DocuSignEmailBody=Please+review+the+Grace+request+for+&quot; +Opportunity__r.KGRenewal__Contact__r.FirstName + &quot;+&quot; + Opportunity__r.KGRenewal__Contact__r.LastName + &quot;+and+either+approve+or+reject.&quot; + 
&quot;&amp;DocuSignR1ID=&quot; + Chpter_Chair__r.Id + 
&quot;&amp;DocuSignR1Type=Signer&quot; + 
&quot;&amp;DocuSignR1Role=Signer+1&quot; + 
&quot;&amp;DocuSignR1RoutingOrder=1&quot; + 
&quot;&amp;DocuSignR2ID=&quot; + Chapter_Administrator__r.Id + 
&quot;&amp;DocuSignR2Type=Carbon+Copy&quot; + 
&quot;&amp;DocuSignR2Role=Signer+2&quot; + 
&quot;&amp;DocuSignR2RoutingOrder=1&quot; + 
&quot;&amp;DocuSignExpireVoidEnv=0&quot; + 
&quot;&amp;DocuSignSendAsUserId=00561000002EHIF&quot;+ 
&quot;&amp;defaultpdf=0&quot; + 
&quot;&amp;DocuSignTag=0&quot; + 
&quot;&amp;DS7=17&quot; + 
&quot;&amp;QMode=DocuSign&quot;+ 
&quot;&amp;docusignendpoint=prod&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grace Chapter Approval CC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Chapter_Approval_CMO__c</fullName>
        <formula>&quot;&amp;Id=&quot; +Id + 
&quot;&amp;TemplateId=a2F61000001KGdX&quot; + 
&quot;&amp;OFN=Grace+Request+-+&quot;+Contact__c+ 
&quot;&amp;DocuSignVisible=1&quot; + 
&quot;&amp;DocuSignEmailSubject=Please+DocuSign+this+document:+Grace+Request&quot; + 
&quot;&amp;DocuSignEmailBody=Please+review+the+Grace+request+for+&quot; +Opportunity__r.KGRenewal__Contact__r.FirstName + &quot;+&quot; + Opportunity__r.KGRenewal__Contact__r.LastName + &quot;+and+either+approve+or+reject.&quot; + 
&quot;&amp;DocuSignR1ID=&quot; + Chapter_Membership_Officer__r.Id + 
&quot;&amp;DocuSignR1Type=Signer&quot; + 
&quot;&amp;DocuSignR1Role=Signer+1&quot; + 
&quot;&amp;DocuSignR1RoutingOrder=1&quot; + 
&quot;&amp;DocuSignR2ID=&quot; + Chapter_Administrator__r.Id + 
&quot;&amp;DocuSignR2Type=Carbon+Copy&quot; + 
&quot;&amp;DocuSignR2Role=Signer+2&quot; + 
&quot;&amp;DocuSignR2RoutingOrder=1&quot; + 
&quot;&amp;DocuSignExpireVoidEnv=0&quot; + 
&quot;&amp;DocuSignSendAsUserId=00561000002EHIF&quot;+ 
&quot;&amp;defaultpdf=0&quot; + 
&quot;&amp;DocuSignTag=0&quot; + 
&quot;&amp;QMode=DocuSign&quot;+ 
&quot;&amp;docusignendpoint=prod&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grace Chapter Approval CMO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Ext_Chapter_Approval_CC__c</fullName>
        <formula>&quot;&amp;Id=&quot; +Id +
&quot;&amp;TemplateId=a2J4C000000Gp4o&quot; +
&quot;&amp;OFN=Grace+Request+-+&quot;+Contact__c+
&quot;&amp;DocuSignVisible=1&quot; +
&quot;&amp;DocuSignEmailSubject=Please+DocuSign+this+document:+Grace+Request&quot; +
&quot;&amp;DocuSignEmailBody=Please+review+the+Grace+Extension+request+for+&quot; +Opportunity__r.KGRenewal__Contact__r.FirstName + &quot;+&quot; + Opportunity__r.KGRenewal__Contact__r.LastName + &quot;+and+either+approve+or+reject.&quot; +
&quot;&amp;DocuSignR1ID=&quot; +  Opportunity__r.Chpter_Chair__r.Id  + 
&quot;&amp;DocuSignR1Role=Signer+1&quot; +
&quot;&amp;DocuSignR2ID=&quot; + Opportunity__r.Chapter_Administrator__r.Id + 
&quot;&amp;DocuSignR2Type=Carbon+Copy&quot; +
&quot;&amp;DocuSignExpireVoidEnv=0&quot; +
&quot;&amp;defaultpdf=0&quot; +
&quot;&amp;DocuSignTag=0&quot; +
&quot;&amp;DS7=17&quot; +
&quot;&amp;QMode=DocuSign&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grace Ext Chapter Approval CC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Ext_Chapter_Approval_CMO__c</fullName>
        <formula>&quot;&amp;Id=&quot; +Id +
&quot;&amp;TemplateId=a2J4C000000Gp4o&quot; +
&quot;&amp;OFN=Grace+Request+-+&quot;+Contact__c+
&quot;&amp;DocuSignVisible=1&quot; +
&quot;&amp;DocuSignEmailSubject=Please+DocuSign+this+document:+Grace+Extension+Request&quot; +
&quot;&amp;DocuSignEmailBody=Please+review+the+Grace+Extension+request+for+&quot; +Opportunity__r.KGRenewal__Contact__r.FirstName + &quot;+&quot; + Opportunity__r.KGRenewal__Contact__r.LastName + &quot;+and+either+approve+or+reject.&quot; +
&quot;&amp;DocuSignR1ID=&quot; +   Opportunity__r.Chapter_Membership_Officer__r.Id   + 
&quot;&amp;DocuSignR1Role=Signer+1&quot; +
&quot;&amp;DocuSignR2ID=&quot; + Opportunity__r.Chapter_Administrator__r.Id + 
&quot;&amp;DocuSignR2Type=Carbon+Copy&quot; +
&quot;&amp;DocuSignExpireVoidEnv=0&quot; +
&quot;&amp;defaultpdf=0&quot; +
&quot;&amp;DocuSignTag=0&quot; +
&quot;&amp;DS7=17&quot; +
&quot;&amp;QMode=DocuSign&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grace Ext Chapter Approval CMO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_FY__c</fullName>
        <formula>TEXT(YEAR(End_of_Current_Fiscal__c) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <label>No. of Employees (directly supervise)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>Exceptions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organisation_type__c</fullName>
        <label>Organization Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifying_Company__c</fullName>
        <label>Qualifying Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Waiver_Request_Form__c</fullName>
        <formula>IF( ISPICKVAL(Exception_Category__c,&quot;Waiver&quot;),
HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot; + $Api.Session_ID + &quot;&amp;ServerUrl=&quot;+ $Api.Partner_Server_URL_240 + &quot;&amp;Id=&quot; + Id + &quot;&amp;TemplateId=a2J4C000000GmdI&quot; + &quot;&amp;DocuSignVisible=1&quot; + &quot;&amp;DocuSignEmailSubject=Please DocuSign this document: YPO Waiver Request&quot; + &quot;&amp;DocuSignEmailBody=Please review the YPO waiver request and either approve or reject.&quot; + &quot;&amp;DocuSignExpireVoidEnv=0&quot; + &quot;&amp;sc0=1&quot; + &quot;&amp;sc1=attachments&quot; + &quot;&amp;defaultpdf=1&quot; + &quot;&amp;DocuSignTag=0&quot; + &quot;&amp;QMode=DocuSign&quot;, &quot;Send Waiver Request Form&quot;),
&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link will display for &apos;Waiver&apos; Exceptions only.</inlineHelpText>
        <label>Send Waiver Request Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_of_Current_Fiscal_Year__c</fullName>
        <description>FOR FUNCTIONAL PURPOSE ONLY</description>
        <formula>Opportunity__r.KGRenewal__ContractEffectiveDate__c</formula>
        <label>Start of Current Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Chapter Approval</fullName>
                </value>
                <value>
                    <fullName>Needs PRC Approval</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_expected_to_requalify__c</fullName>
        <inlineHelpText>For Grace Extension: the chapter expects the YPO member to qualify within this time (*) e.g. 1(one) year.</inlineHelpText>
        <label>Time expected to requalify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Question_1__c</fullName>
        <inlineHelpText>How is the candidate’s title equivalent to any of the qualifying titles as ‘top gun’ in the company? Please provide details.</inlineHelpText>
        <label>Title Qualification</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title_Question_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chapter confirms that it has been objectively verified that the prospect is the ‘top gun’ in the company/or division regardless of the fact that his/her title is not one of the YPO qualifying titles</inlineHelpText>
        <label>Title Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Employee_Compensation__c</fullName>
        <label>Total Employee Compensation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Exception_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Position Held No Longer Qualifies</fullName>
                </value>
                <value>
                    <fullName>Company No Longer Qualifies</fullName>
                </value>
                <value>
                    <fullName>Sold Company</fullName>
                </value>
                <value>
                    <fullName>Started New Company</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Employee Compensation</fullName>
                </value>
                <value>
                    <fullName>Geographic Differentiation</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Waiver__c</fullName>
        <label>Type of Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employee Compensation</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Extraordinary Business Leader</fullName>
                </value>
                <value>
                    <fullName>Grace Extension</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>YPO Gold Early Transition - Age</fullName>
                </value>
                <value>
                    <fullName>YPO Gold Early Transition - YPO Years</fullName>
                </value>
                <value>
                    <fullName>Corporate Qualifications (Annual Compensation; Sales; No of employees; Enterprise value)</fullName>
                    <isActive>false</isActive>
                    <label>Corporate Qualifications (Annual Compensation; Sales; No of employees; Enterprise value)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_test_hyperlink_Conga__c</fullName>
        <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot; + $Api.Session_ID +
&quot;&amp;ServerURL=&quot; +  $Api.Partner_Server_URL_290 +
 Grace_Chapter_Approval_CC__c,
&quot;Test Conga Workflow via UI&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workflow test hyperlink (Conga)</label>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ExceptionsGrace</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Organisation_type__c</columns>
        <columns>Exception_Category__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Waiver__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exception_Category__c</field>
            <operation>equals</operation>
            <value>Grace</value>
        </filters>
        <label>Exception - Grace</label>
    </listViews>
    <listViews>
        <fullName>ExceptionsWaiverTitle</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Organisation_type__c</columns>
        <columns>Exception_Category__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Waiver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Exception_Category__c</field>
            <operation>equals</operation>
            <value>Waiver</value>
        </filters>
        <filters>
            <field>Type_of_Waiver__c</field>
            <operation>equals</operation>
            <value>Title</value>
        </filters>
        <label>Exception - Waiver - Title</label>
    </listViews>
    <listViews>
        <fullName>GraceChptAppr</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Exception_Category__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Type_of_Waiver__c</columns>
        <columns>Status__c</columns>
        <columns>Chapter_Membership_Officer__c</columns>
        <columns>Chpter_Chair__c</columns>
        <columns>Add_Waiver_Request_comments_or_cl__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Needs Chapter Approval,Approved</value>
        </filters>
        <filters>
            <field>Exception_Category__c</field>
            <operation>equals</operation>
            <value>Grace</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>Exchange Test</value>
        </filters>
        <filters>
            <field>Chapter_Approval__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Data_Migration</value>
        </filters>
        <label>Renewals - Grace Awaiting Chapter Aprvl</label>
        <sharedTo>
            <group>Chapter_Administrators</group>
            <group>Chpt_Mbrshp_Officer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GraceDenied</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Exception_Category__c</columns>
        <columns>Type_of_Waiver__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Chapter_Membership_Officer__c</columns>
        <columns>Chpter_Chair__c</columns>
        <columns>Add_Waiver_Request_comments_or_cl__c</columns>
        <columns>Decision_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Chapter_Approval__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <filters>
            <field>Exception_Category__c</field>
            <operation>equals</operation>
            <value>Grace</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>Exchange Test</value>
        </filters>
        <label>Renewals - Grace Denied by Chapter</label>
        <sharedTo>
            <group>Chapter_Administrators</group>
            <group>Chpt_Mbrshp_Officer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Needs_Chapter_Approval</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Needs Chapter Approval</value>
        </filters>
        <label>Needs Chapter Approval</label>
        <sharedTo>
            <group>Chapter_Administrators</group>
            <group>Chpt_Mbrshp_Officer</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Exceptions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Gold_Early_Transition_Exception</fullName>
        <active>true</active>
        <description>When Chapter Approval picklist is updated to Approved AND
(Type of Exception = YPO Gold Early Transition – Age OR YPO Years) AND 
Exception Category = Waiver
The following fields are required:
Unique Member Value, Member Contribution</description>
        <errorConditionFormula>AND(
ISPICKVAL( Chapter_Approval__c , &quot;Approved&quot;),
ISPICKVAL( Exception_Category__c, &quot;Waiver&quot;),
OR(
ISPICKVAL( Type_of_Waiver__c, &quot;YPO Gold Early Transition - Age&quot;),
ISPICKVAL( Type_of_Waiver__c, &quot;YPO Gold Early Transition - YPO Years&quot;)),
OR(
ISBLANK(All_Question_1__c) ,
ISBLANK( All_Question_2__c ))
)</errorConditionFormula>
        <errorMessage>Approval of this exception type requires the following fields to be populated: Unique Member Value, and Member Contribution</errorMessage>
    </validationRules>
</CustomObject>